JG-2006-01-03-2: Bugfix:    added missing script for drmaaj test

CR-2006-01-03-1: Cleanup:   added more information to warning messages

JG-2006-01-03-1: Bugfix:    qtcsh test failed for SGE 6.0. Cleanup.

JG-2006-01-03-0: Bugfix:    fixed qstat test for SGE 6.0.

CR-2006-01-03-0: Cleanup:   test if build arch directory exists in procedure
                            resolve_build_arch_installed_libs()

JG-2006-12-28-2: Cleanup:   Verified use of wait_for_jobend function.

JG-2006-12-28-1: Enhancem.: Skip darwin hosts in test bugs/issuezilla/126 - the 
                            darwin ps command doesn't output suspended state of
                            processes.
                 Bugfix:    Fixed functional/job_environment.
                            Fixed system_tests/clients/common/setup.

JG-2006-12-28-0: Bugfix:    Avoid errors from complex test on slow machines (or
                            when running in memory debugger).
                 Cleanup:   Don't use CHECK_ACT_PATH as absolute path of the 
                            current check - use CHECK_ACTUAL_TEST_PATH instead.

CR-2006-12-27-0: Bugfix:    Fixed problem when a ts config file is newly 
                            generated

JG-2006-12-27-0: Cleanup:   Removed global variables, minor fixes.

OJ-2006-12-22-1: Testsuite: Added test case for TS IZ 72 in 
                            system_tests/clients/qsub
                 Review:    DT
RD-2006-12-22-0: Enhancem:  Added some tests for fixed issues:
                            - qconf -Arqs added invalid RQS
                            - RQS breaks scheduler behaviour
                            - load_formula does not recognize float weighting
                              factors
                            - test for enhanced load_formula dynamic limit RQS
                              syntax

CR-2006-12-22-0: Bugfix:    o fixed bug for compiling:
                              do aimk depend before clean when testsuite did